Windows exe + universal jar release files

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ buildscript {
 plugins {
     id "com.github.hierynomus.license" version "0.13.1"
     id 'net.researchgate.release' version '2.4.0'
+    // for release-files
+    id 'com.github.johnrengelman.shadow' version '1.2.4'
+    id 'edu.sc.seis.launch4j' version '2.1.0'
 }
 apply plugin: 'application'
 apply plugin: 'jacoco'
