Move release-files to buildSrc, add github uploading

--- a/build.gradle
+++ b/build.gradle
@@ -118,4 +118,4 @@ jacocoTestReport {
 }
 check.dependsOn jacocoTestReport
 
-apply from: 'release-files.gradle'
+apply plugin: me.kenzierocks.releasefiles.ReleaseFilesPlugin
