--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -12,9 +12,7 @@ repositories {
 dependencies {
     compile localGroovy()
 
-    // Plugins that we reference types from
-    // They should be applied normally, so don't depend on them for runtime
-    compileOnly group: 'gradle.plugin.edu.sc.seis.gradle', name: 'launch4j', version: '2.1.0'
+    compile group: 'gradle.plugin.edu.sc.seis.gradle', name: 'launch4j', version: '2.1.0'
 
     compile group: 'org.gradle', name: 'gradle-core', version: '3.1'
     compile group: 'com.googlecode.plist', name: 'dd-plist', version: '1.16'
