Enable find in JEA

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ group=me.kenzierocks
 url=https://kenzierocks.me
 organization=kenzierocks
 version=2.0.2-SNAPSHOT
+kotlin.parallel.tasks.in.project=true
