Add icon for project

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ url=https://kenzierocks.me
 organization=kenzierocks
 version=2.0.2-SNAPSHOT
 kotlin.parallel.tasks.in.project=true
+
+kapt.include.compile.classpath=false
+kapt.use.worker.api=true
